# parsec

./: .clang-format  .gitignore  CMakeLists.txt  CMakeMemoryCheck.cmake  Dekopon_SS_SMPC_packageConfig.cmake  Dekopon_SS_SMPC_packageConfig.cmake.in  LICENSE  MEMORY_LEAK_DETECTION_USAGE.md  README.md  analyze_exp6_data  analyze_exp6_data.cpp  analyze_exp7_data  analyze_exp7_data.cpp  ano.py  benchmark_arith_vs_bool_20250727_161122.csv  benchmark_arith_vs_bool_20250728_175616.csv  benchmark_arith_vs_bool_20250728_180030.csv  benchmark_arith_vs_bool_20250728_180317.csv  benchmark_arith_vs_bool_20250728_190620.csv  benchmark_arith_vs_bool_20250728_191116.csv  benchmark_arith_vs_bool_20250728_210149.csv  benchmark_arith_vs_bool_20250728_211917.csv  benchmark_arith_vs_bool_20250728_212445.csv  build.sh  code_lines_analysis.txt  count_lines.py  hosts  memory_leak_detection_guide.md  parsecConfig.cmake  parsecConfig.cmake.in  ranks  secure_2pc_packageConfig.cmake  secure_2pc_packageConfig.cmake.in  secure_2pc_packageConfigVersion.cmake  simple_test.cpp  test_butterfly_debug  test_butterfly_debug.cpp  test_multiply_comparison.cpp
benchmark/: CMakeLists.txt  algorithm_validate.cpp  algorithm_validate.h  benchmark_arith_vs_bool.cpp  benchmark_sort.cpp  build.sh  demo  main.cpp  test_cases.h
build_no_tbb/: Makefile
build_no_tbb/db/: Makefile
build_no_tbb/primitives/: Makefile
build_test/: Makefile  test_multiply_comparison
build_test/db/: Makefile  db  db_client  db_debugSql
build_test/primitives/: Makefile
db/: CMakeLists.txt
db/benchmark/: CMakeLists.txt  db_count.cpp  db_distinct.cpp  db_filter.cpp  db_group_by.cpp  db_in.cpp  db_join.cpp  db_left_outer_join.cpp  db_max.cpp  db_shuffle.cpp  db_sort.cpp  db_sort_mul_col.cpp
db/client/: main.cpp
db/exp/: CMakeLists.txt  exp_1.cpp  exp_1_validation.cpp  exp_2.cpp  exp_2_validation.cpp  exp_3.cpp  exp_3_validation.cpp  exp_4.cpp  exp_4_validation.cpp  exp_5.cpp  exp_5_validation.cpp  exp_6.cpp  exp_6_validation.cpp  exp_7.cpp  exp_7_validation.cpp  exp_8.cpp  exp_8_optimized.cpp  exp_8_validation.cpp  exp_8_validation_o.cpp
db/include/basis/: Database.h  Table.h  View.h  View.h.clean  Views.h
db/include/conf/: DbConf.h
db/include/dbms/: SystemManager.h
db/include/operator/: CreateSupport.h  DropSupport.h  InsertSupport.h  SelectSupport.h
db/include/socket/: LocalServer.h
db/src/: debugParser.cpp  main.cpp
db/src/basis/: Database.cpp  Table.cpp  View.cpp  Views.cpp
db/src/dbms/: SystemManager.cpp
db/src/operator/: CreateSupport.cpp  DropSupport.cpp  InsertSupport.cpp  SelectSupport.cpp
db/src/socket/: LocalServer.cpp
dbdemo/: CMakeLists.txt
dbdemo/benchmark/: CMakeLists.txt  db_filter.cpp  db_join.cpp  db_sort.cpp
dbdemo/client/: main.cpp  precmd
dbdemo/include/basis/: AbstractRecord.h  Database.h  Table.h  View.h  Views.h
dbdemo/include/conf/: DbConf.h
dbdemo/include/dbms/: SystemManager.h
dbdemo/include/operator/: DropSupport.h  SelectSupport.h
dbdemo/include/socket/: LocalServer.h
dbdemo/src/: debugParser.cpp  main.cpp
dbdemo/src/basis/: AbstractRecord.cpp  Database.cpp  Table.cpp  View.cpp  Views.cpp
dbdemo/src/dbms/: SystemManager.cpp
dbdemo/src/operator/: CreateSupport.cpp  DropSupport.cpp  InsertSupport.cpp  SelectSupport.cpp
dbdemo/src/socket/: LocalServer.cpp
include/: AbstractSecureExecutor.h  SecureExecutor.h
include/accelerate/: SimdSupport.cpp  SimdSupport.h
include/api/: ArithSecret.h  BitSecret.h  BoolSecret.h  IntSecret.h  Secret.h
include/base/: AbstractBatchExecutor.h  AbstractBatchOperator.h  AbstractSecureExecutor.h  AbstractSingleExecutor.h  AbstractSingleOperator.h
include/bit/: BitExecutor.h
include/bmt/: AbstractTripleGenerator.h  BMT.h  FixedTripleGenerator.h  OtBmtGenerator.h  RsaTripleGenerator.h  fixed_triples_0.h  fixed_triples_1.h
include/comm/: Comm.h  IComm.h  MpiComm.h
include/comparison/: ComparisonExecutor.h  MultiplexExecutor.h
include/compute/: ArithExecutor.h  BoolExecutor.h  fixed_ab_pairs_0.h
include/conf/: Conf.h  Consts.h
include/int/: IntArithExecutor.h  IntBoolExecutor.h  IntExecutor.h  fixed_ab_pairs_1.h
include/ot/: AbstractOtBatchExecutor.h  AbstractOtExecutor.h  BaseOtExecutor.h  BaseOtOperator.h  RandOtBatchExecutor.h  RandOtBatchOperator.h  RandOtExecutor.h  RandOtOperator.h  RsaOtExecutor.h
include/parallel/: Async.h  CppAsyncThreadPool.h  CtplThreadPool.h  TbbThreadPool.h  ThreadPool.h  ThreadPoolSupport.h  ctpl_stl.h
include/secret/: Secrets.h
include/sync/: AbstractBlockingQueue.h  BlockingQueue.h  BoostLockFreeQueue.h  BoostSpscQueue.h  CasBlockingQueue.h  LockBlockingQueue.h
include/utils/: Comm.h  Log.h  Math.h  StringUtils.h  System.h
primitives/: CMakeLists.txt
primitives/benchmark/: CMakeLists.txt  algorithm_validate.cpp  algorithm_validate.h  benchmark_arith_vs_bool.cpp  benchmark_background_single.cpp  benchmark_bg_vs_jit.cpp  benchmark_bmt_comparison.cpp  benchmark_dyn_batch_size.cpp  benchmark_jit_single.cpp  benchmark_randot_vs_iknpot.cpp  benchmark_sort.cpp  correctness_base_ot_batch.cpp  correctness_bitwise_bmt.cpp  correctness_bmt_ot_logic.cpp  correctness_iknp_ot_forbits_both_directions.cpp  correctness_iknp_ot_forbits_simple.cpp  correctness_iknp_ot_simple.cpp  correctness_ot.cpp  correctness_ot_boolshare_sort.cpp  correctness_rand_ot.cpp  correctness_secrets_sort.cpp  run_bg_vs_jit_bench.py  run_bg_vs_jit_benchmark.py
python_scripts/: random_ab_pair_generator.py  triple_generator.py
scripts/: memory_check.sh
shell_scripts/: build.sh  install.sh  test.sh  test_demo.sh  upload.sh
sql-parser/test/: select_tests.cpp  sql_tests.cpp
src/: AbstractSecureExecutor.cpp  SecureExecutor.cpp
src/accelerate/: SimdSupport.cpp
src/api/: ArithSecret.cpp  BitSecret.cpp  BoolSecret.cpp  IntSecret.cpp  Secret.cpp
src/base/: AbstractSecureExecutor.cpp  SecureOperator.cpp
src/bit/: BitExecutor.cpp
src/bmt/: AbstractTripleGenerator.cpp  FixedTripleGenerator.cpp  OtBmtGenerator.cpp  RsaTripleGenerator.cpp
test/: CMakeLists.txt  build.sh  main.cpp  test_cases.h
(+320 files in other folders)
